--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         .status.rejected { background: #f44336; color: #fff; }
         .transfer-animation { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 1.5rem; color: #fff; background: rgba(76, 175, 80, 0.9); padding: 20px; border-radius: 10px; text-align: center; box-shadow: 0 0 20px rgba(0, 0, 0, 0.3); animation: transferPulse 1.5s ease-out; z-index: 200; }
         @keyframes transferPulse { 0% { opacity: 0; transform: translate(-50%, -50%) scale(0.5); } 50% { opacity: 1; transform: translate(-50%, -50%) scale(1.1); } 100% { opacity: 0; transform: translate(-50%, -50%) scale(1); } }
-        .receiver-message { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: linear-gradient(135deg, #0288d1, #4fc3f7); color: #fff; padding: 15px 25px; border-radius: 10px; font-size: 1.2rem; font-weight: bold; box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); animation: fadeInOut 2s ease-out; z-index: 200; text-align: center; }
+        .receiver-message { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: linear-gradient(135deg, #0288d1, # discord4fc3f7); color: #fff; padding: 15px 25px; border-radius: 10px; font-size: 1.2rem; font-weight: bold; box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); animation: fadeInOut 2s ease-out; z-index: 200; text-align: center; }
         @keyframes fadeInOut { 0% { opacity: 0; transform: translate(-50%, -50%) scale(0.8); } 20% { opacity: 1; transform: translate(-50%, -50%) scale(1); } 80% { opacity: 1; transform: translate(-50%, -50%) scale(1); } 100% { opacity: 0; transform: translate(-50%, -50%) scale(0.8); } }
         .error-message { color: #f44336; text-align: center; margin-top: 10px; font-weight: bold; font-size: 0.9rem; }
         .hidden { display: none; }
@@ -125,51 +125,70 @@
     <script>
         const supabaseUrl = 'https://vtsczzlnhsrgnbkfyizi.supabase.co';
         const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ0c2N6emxuaHNyZ25ia2Z5aXppIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDI2ODYwODMsImV4cCI6MjA1ODI2MjA4M30.LjP2g0WXgg6FVTM5gPIkf_qlXakkj8Hf5xzXVsx7y68';
-        const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+        const supabase = window.supabase.createClient(supabaseUrl, supabaseKey, { fetch: (...args) => fetch(...args) });
         const imgurClientId = '5befa9dd970c7d0';
 
         let currentUser = { user_id: null, balance: 0, passport_status: 'pending', phone: null };
+
+        async function retryOperation(operation, maxRetries = 3, delay = 1000) {
+            for (let i = 0; i < maxRetries; i++) {
+                try {
+                    return await operation();
+                } catch (error) {
+                    if (i === maxRetries - 1) throw error;
+                    console.warn(`Retry ${i + 1}/${maxRetries} failed: ${error.message}`);
+                    await new Promise(resolve => setTimeout(resolve, delay));
+                }
+            }
+        }
 
         async function initializeUser() {
             try {
                 let userId = localStorage.getItem('userId');
                 if (!userId) {
                     userId = Math.floor(100000 + Math.random() * 900000).toString();
-                    while (true) {
+                    await retryOperation(async () => {
                         const { data: existingUser, error } = await supabase
                             .from('users')
                             .select('user_id')
                             .eq('user_id', userId)
                             .single();
-                        if (error && error.code !== 'PGRST116') throw error;
-                        if (!existingUser) break;
-                        userId = Math.floor(100000 + Math.random() * 900000).toString();
-                    }
-                    localStorage.setItem('userId', userId);
-
-                    const { error: insertError } = await supabase
-                        .from('users')
-                        .insert({ user_id: userId, balance: 0, passport_status: 'pending' });
-                    if (insertError) throw insertError;
-
-                    await fetch('/.netlify/functions/data', {
-                        method: 'POST',
-                        body: JSON.stringify({ user_id: userId }),
-                        headers: { 'Content-Type': 'application/json' }
+                        if (error && error.code !== 'PGRST116') throw new Error(`Check ID Error: ${error.message}`);
+                        if (existingUser) throw new Error('Duplicate ID');
                     });
+
+                    await retryOperation(async () => {
+                        const { error: insertError } = await supabase
+                            .from('users')
+                            .insert({ user_id: userId, balance: 0, passport_status: 'pending' });
+                        if (insertError) throw new Error(`Insert User Error: ${insertError.message}`);
+                    });
+
+                    await retryOperation(async () => {
+                        const response = await fetch('/.netlify/functions/data', {
+                            method: 'POST',
+                            body: JSON.stringify({ user_id: userId }),
+                            headers: { 'Content-Type': 'application/json' }
+                        });
+                        if (!response.ok) throw new Error(`Netlify Function Error: ${await response.text()}`);
+                    });
+
+                    localStorage.setItem('userId', userId);
                 }
                 currentUser.user_id = userId;
 
                 document.getElementById('id-badge').textContent = `ID: ${userId}`;
                 document.getElementById('mi-id').textContent = userId;
 
-                const { data: user, error } = await supabase
-                    .from('users')
-                    .select('*')
-                    .eq('user_id', userId)
-                    .single();
-                if (error && error.code !== 'PGRST116') throw error;
-                if (user) currentUser = user;
+                await retryOperation(async () => {
+                    const { data: user, error } = await supabase
+                        .from('users')
+                        .select('*')
+                        .eq('user_id', userId)
+                        .single();
+                    if (error && error.code !== 'PGRST116') throw new Error(`Fetch User Error: ${error.message}`);
+                    if (user) currentUser = user;
+                });
 
                 document.getElementById('balance').textContent = `${currentUser.balance} Ks`;
                 updateStatus(currentUser.passport_status);
@@ -189,7 +208,7 @@
                 loadHistory();
             } catch (error) {
                 console.error('Initialization Error:', error.message);
-                alert('An error occurred. Please try again.');
+                alert(`An error occurred: ${error.message}. Please try again.`);
             }
         }
 
@@ -305,7 +324,8 @@
                 const response = await fetch('https://api.imgur.com/3/image', {
                     method: 'POST',
                     headers: { Authorization: `Client-ID ${imgurClientId}` },
-                    body: formData
+                    body: formData,
+                    timeout: 10000 // 10 seconds timeout
                 });
                 const data = await response.json();
                 if (!data.success) throw new Error('Imgur Upload Failed');
@@ -318,14 +338,17 @@
 
         async function updateUserData(data) {
             try {
-                const response = await fetch('/.netlify/functions/data', {
-                    method: 'POST',
-                    body: JSON.stringify(data),
-                    headers: { 'Content-Type': 'application/json' }
+                await retryOperation(async () => {
+                    const response = await fetch('/.netlify/functions/data', {
+                        method: 'POST',
+                        body: JSON.stringify(data),
+                        headers: { 'Content-Type': 'application/json' }
+                    });
+                    if (!response.ok) throw new Error(`Netlify Function Error: ${await response.text()}`);
                 });
-                if (!response.ok) throw new Error('Failed to update data');
             } catch (error) {
                 console.error('Update Data Error:', error.message);
+                throw error;
             }
         }
 
@@ -348,8 +371,8 @@
                 }
 
                 const [passportUrl, selfieUrl] = await Promise.all([
-                    uploadToImgur(passportImage),
-                    uploadToImgur(selfieImage)
+                    retryOperation(() => uploadToImgur(passportImage)),
+                    retryOperation(() => uploadToImgur(selfieImage))
                 ]);
 
                 const updatedData = {
@@ -363,7 +386,11 @@
                     submitted_at: new Date().toISOString()
                 };
 
-                await supabase.from('users').update(updatedData).eq('user_id', currentUser.user_id);
+                await retryOperation(async () => {
+                    const { error } = await supabase.from('users').update(updatedData).eq('user_id', currentUser.user_id);
+                    if (error) throw new Error(`Update User Error: ${error.message}`);
+                });
+
                 await updateUserData(updatedData);
 
                 currentUser = { ...currentUser, ...updatedData, passport_status: 'pending' };
@@ -371,7 +398,7 @@
                 updateStatus('pending');
             } catch (error) {
                 console.error('Submit Passport Error:', error.message);
-                alert('An error occurred while submitting passport details.');
+                alert(`An error occurred while submitting passport details: ${error.message}`);
             }
         });
 
@@ -394,13 +421,13 @@
                     .eq('user_id', currentUser.user_id)
                     .eq('payment_pin', pin)
                     .single();
-                if (senderError) throw senderError;
+                if (senderError) throw new Error(`Sender Fetch Error: ${senderError.message}`);
                 const { data: receiver, error: receiverError } = await supabase
                     .from('users')
                     .select('*')
                     .eq('phone', phone)
                     .single();
-                if (receiverError) throw receiverError;
+                if (receiverError) throw new Error(`Receiver Fetch Error: ${receiverError.message}`);
 
                 if (!sender || !receiver || sender.balance < amount || receiver.passport_status !== 'approved') {
                     document.getElementById('transfer-error').textContent = !sender ? 'Incorrect PIN.' : !receiver ? 'Recipient account not found.' : sender.balance < amount ? 'Insufficient balance.' : 'Recipient passport not approved.';
@@ -409,20 +436,26 @@
                 }
 
                 const now = new Date().toLocaleString('en-US', { timeZone: 'Asia/Yangon' });
-                const { error: updateSenderError } = await supabase
-                    .from('users')
-                    .update({ balance: sender.balance - amount })
-                    .eq('user_id', sender.user_id);
-                if (updateSenderError) throw updateSenderError;
-                const { error: updateReceiverError } = await supabase
-                    .from('users')
-                    .update({ balance: receiver.balance + amount })
-                    .eq('user_id', receiver.user_id);
-                if (updateReceiverError) throw updateReceiverError;
-                const { error: insertError } = await supabase
-                    .from('transactions')
-                    .insert({ from_phone: sender.phone, to_phone: receiver.phone, amount, note, timestamp: now });
-                if (insertError) throw insertError;
+                await retryOperation(async () => {
+                    const { error: updateSenderError } = await supabase
+                        .from('users')
+                        .update({ balance: sender.balance - amount })
+                        .eq('user_id', sender.user_id);
+                    if (updateSenderError) throw new Error(`Update Sender Error: ${updateSenderError.message}`);
+                });
+                await retryOperation(async () => {
+                    const { error: updateReceiverError } = await supabase
+                        .from('users')
+                        .update({ balance: receiver.balance + amount })
+                        .eq('user_id', receiver.user_id);
+                    if (updateReceiverError) throw new Error(`Update Receiver Error: ${updateReceiverError.message}`);
+                });
+                await retryOperation(async () => {
+                    const { error: insertError } = await supabase
+                        .from('transactions')
+                        .insert({ from_phone: sender.phone, to_phone: receiver.phone, amount, note, timestamp: now });
+                    if (insertError) throw new Error(`Insert Transaction Error: ${insertError.message}`);
+                });
 
                 currentUser.balance = sender.balance - amount;
                 document.getElementById('balance').textContent = `${currentUser.balance} Ks`;
@@ -439,7 +472,7 @@
                 setTimeout(() => animation.remove(), 1500);
             } catch (error) {
                 console.error('Transfer Error:', error.message);
-                document.getElementById('transfer-error').textContent = 'An error occurred during transfer.';
+                document.getElementById('transfer-error').textContent = `An error occurred during transfer: ${error.message}`;
                 document.getElementById('transfer-error').classList.remove('hidden');
             }
         });
