--- a/public/index.html
+++ b/public/index.html
@@ -330,6 +330,18 @@
         }
         .account-status.not-found { color: #ff4d4d; }
         .account-status.found { color: #4caf50; }
+        .balance-display {
+            background: linear-gradient(135deg, #00c4ff, #007bff);
+            padding: 10px;
+            border-radius: 8px;
+            border: 2px solid #ffd700;
+            color: #fff;
+            font-size: 1.2rem;
+            font-weight: bold;
+            text-align: center;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+        }
         @media print {
             body { background: #fff; }
             video#bg-video, .stars, .moon, .menu { display: none; }
@@ -378,7 +390,7 @@
     </video>
     <div class="stars" id="stars"></div>
     <div class="moon"></div>
-    <img class="logo" src="https://github.com/Opper125/opper-payment/blob/main/logo.png" alt="OPPER Logo">
+    <img class="logo" src="https://github.com/Opper125/opper-payment/raw/main/logo.png" alt="OPPER Logo">
 
     <div class="id-badge" id="id-badge">ID: </div>
 
@@ -387,7 +399,7 @@
         <h2>My Wallet</h2>
         <div class="form-group">
             <label>Balance</label>
-            <p><span id="balance">0 Ks</span></p>
+            <p class="balance-display"><span id="balance">0 Ks</span></p>
             <button id="transfer-btn" onclick="toggleTransfer()" disabled>Transfer Money</button>
             <p id="wallet-status" class="status pending">Passport Verification Required</p>
         </div>
@@ -644,7 +656,7 @@
                     const item = document.createElement('div');
                     item.className = `history-item ${t.from_phone === currentUser.phone ? 'out' : 'in'}`;
                     item.innerHTML = `
-                        <img class="logo" src="https://github.com/your-username/your-repo/raw/main/logo.png" alt="OPPER Logo">
+                        <img class="logo" src="https://github.com/Opper125/opper-payment/raw/main/logo.png" alt="OPPER Logo">
                         ${t.from_phone === currentUser.phone ? '-' : '+'}${t.amount} Ks<br>
                         Transaction ID: ${t.transaction_id || 'N/A'}<br>
                         Phone: ${t.from_phone === currentUser.phone ? t.to_phone : t.from_phone}<br>
@@ -688,7 +700,7 @@
                 </head>
                 <body>
                     <div class="receipt">
-                        <img class="logo" src="https://github.com/your-username/your-repo/raw/main/logo.png" alt="OPPER Logo">
+                        <img class="logo" src="https://github.com/Opper125/opper-payment/raw/main/logo.png" alt="OPPER Logo">
                         <h1>OPPER Payment Transaction Receipt</h1>
                         <p><strong>Transaction ID:</strong> ${transaction.transaction_id || 'N/A'}</p>
                         <p><strong>Amount:</strong> ${transaction.amount} Ks</p>
@@ -863,6 +875,8 @@
 
                 const transactionId = Math.floor(100000000000 + Math.random() * 900000000000).toString();
                 const now = new Date().toLocaleString('en-US', { timeZone: 'Asia/Yangon' });
+
+                // Update Sender Balance
                 await retryOperation(async () => {
                     const { error: updateSenderError } = await supabase
                         .from('users')
@@ -870,6 +884,8 @@
                         .eq('user_id', sender.user_id);
                     if (updateSenderError) throw new Error(`Update Sender Error: ${updateSenderError.message}`);
                 });
+
+                // Update Receiver Balance
                 await retryOperation(async () => {
                     const { error: updateReceiverError } = await supabase
                         .from('users')
@@ -877,11 +893,23 @@
                         .eq('user_id', receiver.user_id);
                     if (updateReceiverError) throw new Error(`Update Receiver Error: ${updateReceiverError.message}`);
                 });
+
+                // Insert Transaction
                 await retryOperation(async () => {
                     const { error: insertError } = await supabase
                         .from('transactions')
-                        .insert({ from_phone: sender.phone, to_phone: receiver.phone, amount, note, timestamp: now, transaction_id: transactionId });
-                    if (insertError) throw new Error(`Insert Transaction Error: ${insertError.message}`);
+                        .insert({
+                            from_phone: sender.phone,
+                            to_phone: receiver.phone,
+                            amount: amount,
+                            note: note || null,
+                            timestamp: now,
+                            transaction_id: transactionId
+                        });
+                    if (insertError) {
+                        console.error('Insert Transaction Error Details:', insertError);
+                        throw new Error(`Insert Transaction Error: ${insertError.message || 'Unknown error'}`);
+                    }
                 });
 
                 currentUser.balance = sender.balance - amount;
