--- a/public/index.html
+++ b/public/index.html
@@ -400,7 +400,7 @@
         <div class="form-group">
             <label>Balance</label>
             <p class="balance-display"><span id="balance">0 Ks</span></p>
-            <button id="transfer-btn" onclick="toggleTransfer()" disabled>Transfer Money</button>
+            <button id="transfer-btn" onclick="toggleTransfer()" disabled>💲💳 Transafer</button>
             <p id="wallet-status" class="status pending">Passport Verification Required</p>
         </div>
         <div id="transfer" class="form-group hidden">
@@ -482,7 +482,6 @@
         const imgurClientId = '5befa9dd970c7d0';
 
         let currentUser = { user_id: null, balance: 0, passport_status: 'pending', phone: null };
-        let localTransactions = JSON.parse(localStorage.getItem('localTransactions')) || [];
 
         // Add Stars and Meteors
         const starsContainer = document.getElementById('stars');
@@ -653,24 +652,17 @@
                 historyList.innerHTML = '';
                 let totalIn = 0, totalOut = 0;
 
-                // Merge Supabase transactions with local transactions
-                const allTransactions = [...transactions, ...localTransactions].filter(t => {
-                    const transactionDate = new Date(t.timestamp);
-                    return transactionDate.getMonth() === monthFilter;
-                });
-
-                allTransactions.forEach(t => {
+                (transactions || []).forEach(t => {
                     const item = document.createElement('div');
                     item.className = `history-item ${t.from_phone === currentUser.phone ? 'out' : 'in'}`;
                     item.innerHTML = `
                         <img class="logo" src="https://github.com/Opper125/opper-payment/raw/main/logo.png" alt="OPPER Logo">
                         ${t.from_phone === currentUser.phone ? '-' : '+'}${t.amount} Ks<br>
-                        Transaction ID: ${t.localTransactionId || 'N/A'}<br>
                         Phone: ${t.from_phone === currentUser.phone ? t.to_phone : t.from_phone}<br>
                         Note: ${t.note || 'None'}<br>
                         Time: ${t.timestamp}<br>
                         Status: ${t.from_phone === currentUser.phone ? 'Sent' : 'Received'}
-                        <button class="print-btn" onclick="printTransaction('${t.id || t.localTransactionId}')"></button>
+                        <button class="print-btn" onclick="printTransaction('${t.id}')"></button>
                     `;
                     historyList.appendChild(item);
                     if (t.from_phone === currentUser.phone) totalOut += t.amount;
@@ -685,19 +677,12 @@
         }
 
         async function printTransaction(transactionId) {
-            let transaction;
-            const supabaseTransaction = await supabase
+            const { data: transaction, error } = await supabase
                 .from('transactions')
                 .select('*')
                 .eq('id', transactionId)
                 .single();
-            if (supabaseTransaction.data) {
-                transaction = supabaseTransaction.data;
-            } else {
-                transaction = localTransactions.find(t => t.localTransactionId === transactionId);
-            }
-
-            if (!transaction) return;
+            if (error) throw error;
 
             const printWindow = window.open('', '_blank');
             printWindow.document.write(`
@@ -716,7 +701,6 @@
                     <div class="receipt">
                         <img class="logo" src="https://github.com/Opper125/opper-payment/raw/main/logo.png" alt="OPPER Logo">
                         <h1>OPPER Payment Transaction Receipt</h1>
-                        <p><strong>Transaction ID:</strong> ${transaction.localTransactionId || 'N/A'}</p>
                         <p><strong>Amount:</strong> ${transaction.amount} Ks</p>
                         <p><strong>From:</strong> ${transaction.from_phone}</p>
                         <p><strong>To:</strong> ${transaction.to_phone}</p>
@@ -731,7 +715,7 @@
 
             setTimeout(() => {
                 printWindow.print();
-                html2pdf().from(printWindow.document.body).save(`Transaction_${transaction.localTransactionId || 'N/A'}.pdf`);
+                html2pdf().from(printWindow.document.body).save(`Transaction_${transaction.id}.pdf`);
                 printWindow.close();
             }, 500);
         }
@@ -886,7 +870,6 @@
                     return;
                 }
 
-                const localTransactionId = Math.floor(100000000000 + Math.random() * 900000000000).toString();
                 const now = new Date().toLocaleString('en-US', { timeZone: 'Asia/Yangon' });
 
                 // Update Sender Balance
@@ -920,18 +903,6 @@
                         });
                     if (insertError) throw new Error(`Insert Transaction Error: ${insertError.message}`);
                 });
-
-                // Store Transaction Locally with localTransactionId
-                const localTransaction = {
-                    localTransactionId: localTransactionId,
-                    from_phone: sender.phone,
-                    to_phone: receiver.phone,
-                    amount: amount,
-                    note: note || null,
-                    timestamp: now
-                };
-                localTransactions.push(localTransaction);
-                localStorage.setItem('localTransactions', JSON.stringify(localTransactions));
 
                 currentUser.balance = sender.balance - amount;
                 document.getElementById('balance').textContent = `${currentUser.balance} Ks`;
