--- a/public/index.html
+++ b/public/index.html
@@ -422,6 +422,7 @@
         const imgurClientId = '5befa9dd970c7d0';
 
         let currentUser = { user_id: null, balance: 0, passport_status: 'pending', phone: null };
+        let allowTransfers = true;
 
         // Add Particles
         const particlesContainer = document.getElementById('particles');
@@ -495,6 +496,20 @@
             }
         }
 
+        async function checkTransferSettings() {
+            try {
+                const { data, error } = await supabase
+                    .from('settings')
+                    .select('allow_transfers')
+                    .single();
+                if (error) throw new Error(`Fetch Settings Error: ${error.message}`);
+                allowTransfers = data.allow_transfers;
+            } catch (error) {
+                console.error('Check Transfer Settings Error:', error.message);
+                allowTransfers = false; // Default to false if error occurs
+            }
+        }
+
         async function initializeUser() {
             try {
                 let userId = localStorage.getItem('userId');
@@ -517,15 +532,6 @@
                         if (insertError) throw new Error(`Insert User Error: ${insertError.message}`);
                     });
 
-                    await retryOperation(async () => {
-                        const response = await fetch('/.netlify/functions/data', {
-                            method: 'POST',
-                            body: JSON.stringify({ user_id: userId }),
-                            headers: { 'Content-Type': 'application/json' }
-                        });
-                        if (!response.ok) throw new Error(`Netlify Function Error: ${await response.text()}`);
-                    });
-
                     localStorage.setItem('userId', userId);
                 }
                 currentUser.user_id = userId;
@@ -545,6 +551,9 @@
 
                 document.getElementById('balance').textContent = `${currentUser.balance} Ks`;
                 updateStatus(currentUser.passport_status);
+
+                // Check transfer settings on load
+                await checkTransferSettings();
 
                 supabase.channel('users-channel')
                     .on('postgres_changes', { event: '*', schema: 'public', table: 'users', filter: `user_id=eq.${userId}` }, payload => {
@@ -568,6 +577,12 @@
                     })
                     .subscribe();
 
+                supabase.channel('settings-channel')
+                    .on('postgres_changes', { event: '*', schema: 'public', table: 'settings' }, payload => {
+                        allowTransfers = payload.new.allow_transfers;
+                    })
+                    .subscribe();
+
                 loadHistory();
             } catch (error) {
                 console.error('Initialization Error:', error.message);
@@ -580,6 +595,10 @@
                 alert('Passport must be approved to transfer money.');
                 return;
             }
+            if (!allowTransfers) {
+                alert('Transfer functionality is currently disabled by the server.');
+                return;
+            }
             document.getElementById('transfer').classList.toggle('hidden');
         }
 
@@ -589,6 +608,13 @@
                 const receiverName = document.getElementById('receiver-name');
                 receiverName.textContent = '';
                 if (phone.match(/^09\d{9}$/)) {
+                    // Check if the phone number is the same as the current user's phone
+                    if (phone === currentUser.phone) {
+                        receiverName.className = 'account-status not-found';
+                        receiverName.textContent = 'You cannot transfer money to your own phone number.';
+                        return;
+                    }
+
                     const { data: receiver, error } = await supabase
                         .from('users')
                         .select('user_id, phone, passport_status')
@@ -743,22 +769,6 @@
             }
         }
 
-        async function updateUserData(data) {
-            try {
-                await retryOperation(async () => {
-                    const response = await fetch('/.netlify/functions/data', {
-                        method: 'POST',
-                        body: JSON.stringify(data),
-                        headers: { 'Content-Type': 'application/json' }
-                    });
-                    if (!response.ok) throw new Error(`Netlify Function Error: ${await response.text()}`);
-                });
-            } catch (error) {
-                console.error('Update Data Error:', error.message);
-                throw error;
-            }
-        }
-
         document.getElementById('submit-passport-btn').addEventListener('click', async () => {
             try {
                 const passportNumber = document.getElementById('passport-number').value;
@@ -794,8 +804,6 @@
                     if (error) throw new Error(`Update User Error: ${error.message}`);
                 });
 
-                await updateUserData(updatedData);
-
                 currentUser = { ...currentUser, ...updatedData, passport_status: 'pending' };
                 alert('Passport details submitted successfully. Awaiting approval.');
                 updateStatus('pending');
@@ -807,6 +815,12 @@
 
         document.getElementById('confirm-transfer-btn').addEventListener('click', async () => {
             try {
+                if (!allowTransfers) {
+                    document.getElementById('transfer-error').textContent = 'Transfer functionality is currently disabled by the server.';
+                    document.getElementById('transfer-error').classList.remove('hidden');
+                    return;
+                }
+
                 const phone = document.getElementById('transfer-phone').value;
                 const amount = parseInt(document.getElementById('transfer-amount').value);
                 const note = document.getElementById('transfer-note').value;
@@ -814,6 +828,13 @@
 
                 if (!phone.match(/^09\d{9}$/) || amount > 1000000 || amount <= 0 || pin.length !== 6) {
                     document.getElementById('transfer-error').textContent = 'Invalid input. Max 1,000,000 Ks, PIN must be 6 digits.';
+                    document.getElementById('transfer-error').classList.remove('hidden');
+                    return;
+                }
+
+                // Check if the phone number is the same as the current user's phone
+                if (phone === currentUser.phone) {
+                    document.getElementById('transfer-error').textContent = 'You cannot transfer money to your own phone number.';
                     document.getElementById('transfer-error').classList.remove('hidden');
                     return;
                 }
@@ -873,9 +894,6 @@
                 document.getElementById('balance').textContent = `${currentUser.balance} Ks`;
                 document.getElementById('transfer-error').classList.add('hidden');
                 document.getElementById('transfer').classList.add('hidden');
-
-                await updateUserData({ user_id: sender.user_id, balance: sender.balance - amount });
-                await updateUserData({ user_id: receiver.user_id, balance: receiver.balance + amount });
 
                 const animation = document.createElement('div');
                 animation.className = 'transfer-animation';
